tests/invalid_sem/com/com01.java
class Main {
    static void run() {
        int a = "Hello world\n";
    }
}
